# nix-frust

./: .envrc  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.lock.license  Cargo.toml  LICENSE  deny.toml  flake.nix
.github/workflows/: checks.yaml
.reuse/: dep5
src/: eval.rs  main.rs  upvalues.rs
src/compiler/: chunk.rs  mod.rs  opcode.rs  scope.rs  span.rs
src/eval/: context.rs  mod.rs  value.rs
src/extensions/: mod.rs  string.rs
src/parse/: arith.rs  attr_set.rs  float.rs  fun_def.rs  ident.rs  integer.rs  let_in.rs  mod.rs  url.rs
src/values/: mod.rs  string.rs  thunk.rs
tests/nix-tests/: README.md  eval-fail-assert.nix  eval-fail-hashfile-missing.nix  eval-fail-remove.nix  eval-okay-attrs3.nix  eval-okay-context.nix  eval-okay-elem.nix  eval-okay-eq-derivations.nix  eval-okay-ind-string.nix  eval-okay-list.nix  eval-okay-listtoattrs.nix  eval-okay-map.nix  eval-okay-new-let.nix  eval-okay-remove.nix  parse-fail-dup-attrs-2.nix  parse-fail-dup-attrs-3.nix  parse-fail-dup-attrs-7.nix  parse-fail-dup-formals.nix  parse-fail-eof-in-string.nix  parse-fail-mixed-nested-attrs1.nix  parse-fail-mixed-nested-attrs2.nix  parse-okay-crlf.nix  parse-okay-mixed-nested-attrs-1.nix  parse-okay-mixed-nested-attrs-2.nix
