# SPDX-FileCopyrightText: 2023 Norbert Melzer <timmelzer@gmailcom>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nix-frust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later and CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "1.0.0-alpha.6"
color-eyre = "0.6.2"
eyre = "0.6.8"
nil_syntax = { git = "https://github.com/oxalica/nil.git", rev = "2023-08-09", package = "syntax" }
parking_lot = "0.12.1"
partialdebug = "0.2.0"
textwrap = "0.16.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
test-generator = "0.3.1"
